--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>jenkins-docker-example</artifactId>
+  <version>1.0</version>
 
   <name>my-app</name>
   <!-- FIXME change it to the project's website -->
